[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "wrk17",
    "simu", "algebra",
    "protocol",
]
resolver = "2"
default-members = ["wrk17", "protocol", "algebra"]

[workspace.dependencies]
bitvm = { git = "https://github.com/BitVM/BitVM", rev = "79eccd9" }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script", rev="519088c7" }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
bitcoin_hashes = "0.16.0"
serde = { version = "1.0.197", features = ["derive"] }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack", rev="643c5f1a" }
hex = "0.4.3"
secp256k1 = { version = "0.29.1", features = ["global-context"] }
anyhow = "1.0.98"
serde_json = "1.0"

musig2 = { version = "0.2.4", features = ["serde", "rand", "k256"]}

rand = "0.8.5"
rand_chacha = "0.3.1"
#blake3 = { version = "1.5.1", features = ["traits-preview"] }
blake3 = "=1.5.1"
curve25519-dalek-ng = "4.1.1"
bincode = "1.3"
itertools = "0.14.0"

wrk17 = { path = "./wrk17" }
protocol = { path = "./protocol" }
algebra = { path = "./algebra" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true