[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "wrk17",
    "garbler", "algebra",
    "protocol",
]
resolver = "2"
#default-members = ["garbler"]

[workspace.dependencies]
bitvm = { git = "https://github.com/BitVM/BitVM", rev = "79eccd9" }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script", rev="519088c7" }
bitcoin = { version = "0.32.5", features = ["rand-std"] }
serde = { version = "1.0.197", features = ["derive"] }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack", rev="643c5f1a" }
hex = "0.4.3"
secp256k1 = { version = "0.29.1", features = ["global-context"] }
serde_json = "1.0"
musig2 = { version = "0.2.4", features = ["serde", "rand", "k256"]}

rand = "0.8.5"
rand_chacha = "0.3.1"
blake3 = "=1.5.1"
curve25519-dalek-ng = "4.1.1"
bincode = "1.3"
itertools = "0.14.0"

# utils
anyhow = "1.0.98"
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }

wrk17 = { path = "./wrk17" }
protocol = { path = "./protocol" }
algebra = { path = "./algebra" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
